# simili-svn

./: AUTHORS  COPYING  Makefile.am  Makefile.in  README  TODO  aclocal.m4  autogen.sh  configure  configure.in  simili.html  simili.list.in  simili.pc.in
debian/: Makefile.am  Makefile.in  changelog  control  copyright  libfms0-dev.install  libfms0.install  rules
src/: Makefile.am  Makefile.in  midi.c  midi.h  midi_alsa.c  midi_alsa.h  midi_buffer.c  midi_buffer.h  midi_file.c  midi_file.h  midi_mux.c  midi_mux.h  midi_pipe.c  midi_pipe.h  midi_port.c  midi_port.h  midi_rtp.c  midi_rtp.h  misc.h  obj.h  simili.h
tools/: Makefile.am  Makefile.in  debug.h  lex.c  lex.l  midi2text.c  parse.c  parse.h  parse.y  text2midi.c  text2midi.h
